[gd_scene load_steps=5 format=3 uid="uid://coes3nu6dhfu6"]

[ext_resource type="Script" path="res://hud/hud.gd" id="1_5xmpm"]
[ext_resource type="Texture2D" uid="uid://c6880fbjbqn43" path="res://hud/health-red 32px.png" id="2_eajct"]
[ext_resource type="Texture2D" uid="uid://cky2jf3b4k1l3" path="res://hud/ammo-rifle-alt 32px.png" id="3_qrqir"]
[ext_resource type="Texture2D" uid="uid://mnltwowiyocm" path="res://hud/health-armor 32px.png" id="4_hccuu"]

[node name="hud" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_5xmpm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -64.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="player_box" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="health_box" type="HBoxContainer" parent="MarginContainer/player_box"]
layout_mode = 2

[node name="health_texture" type="TextureRect" parent="MarginContainer/player_box/health_box"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("2_eajct")
stretch_mode = 4

[node name="health_label" type="Label" parent="MarginContainer/player_box/health_box"]
layout_mode = 2
text = "100"

[node name="ammo_box" type="HBoxContainer" parent="MarginContainer/player_box"]
layout_mode = 2

[node name="ammo_texture" type="TextureRect" parent="MarginContainer/player_box/ammo_box"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("3_qrqir")
stretch_mode = 4

[node name="ammo_label" type="Label" parent="MarginContainer/player_box/ammo_box"]
layout_mode = 2
text = "100"

[node name="game_win_box" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="game_won_label" type="RichTextLabel" parent="MarginContainer/game_win_box"]
layout_mode = 2
text = "Trophy collected!"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 62.0
grow_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="car_box" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="speed_box" type="HBoxContainer" parent="MarginContainer2/car_box"]
layout_mode = 2

[node name="speed_texture" type="TextureRect" parent="MarginContainer2/car_box/speed_box"]
layout_mode = 2
texture = ExtResource("4_hccuu")
stretch_mode = 4

[node name="speed_label" type="Label" parent="MarginContainer2/car_box/speed_box"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "50 mph"
horizontal_alignment = 2
